# tufa_backend

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Config.toml  Dockerfile  Dockerfile.cache  README.md  dbs.env  docker-compose-postgresql.yml  docker-compose-rust.yml  docker-compose.yml  dockerfile.cache  errorlogs.txt  examples_for_future.txt  f  ff.txt  how_to_install_rust_windows10.txt  how_to_install_rust_wsl2.txt  mathQA.txt  spec.yaml  thoughts.txt  todo.txt  todo_code.txt  todo_tests  todo_tests.txt
code_examples/: examples_for_future.txt
config/: Default.toml  Development.toml  Production.toml  (+3 more)
libs/config_lib/: Cargo.toml
libs/config_lib/src/: lib.rs
libs/config_lib/src/get_project_information/: config_error.rs  config_error_test.rs  env_var_bool_enum.rs  env_var_bool_names_constants.rs  env_var_enum.rs  env_var_i64_enum.rs  env_var_i64_names_constants.rs  env_var_kind_enum.rs  env_var_name_kind_enum.rs  env_var_names_constants.rs  env_var_string_enum.rs  env_var_string_names_constants.rs  env_var_types_enum.rs  env_var_u8_enum.rs  env_var_u8_names_constants.rs  get_mongo_url.rs  project_constants.rs  provider_kind_enum.rs  var_or_bool_parse_error_enum.rs
libs/config_lib/src/get_project_information/get_config/: config_error.rs  config_struct.rs  config_structures.rs  enable_error_providers_prints_struct.rs  enable_initialize_mongo_with_providers_link_parts_struct.rs  enable_mongo_cloud_url_parts_struct.rs  enable_mongo_own_url_parts_struct.rs  enable_partial_success_providers_prints_struct.rs  enable_providers_cleaning_warning_logs_db_collections_in_mongo_struct.rs  enable_providers_cleaning_warning_logs_db_in_mongo_struct.rs  enable_providers_cleaning_warning_logs_directory_struct.rs  enable_providers_info_struct.rs  enable_providers_links_limit_struct.rs  enable_providers_struct.rs  enable_randomize_order_for_providers_link_parts_for_mongo_struct.rs  enable_success_providers_prints_struct.rs  enable_warning_high_providers_prints_struct.rs  enable_warning_low_providers_prints_struct.rs  get_config_information.rs  get_lazy_config_information.rs  mongo_cloud_authorization_struct.rs  mongo_own_authorization_struct.rs  mongo_params_struct.rs  mongo_url_parts_struct.rs  params_struct.rs  postgres_authorization_struct.rs  postgres_own_authorization_struct.rs  postgres_params_struct.rs  postgres_url_parts_struct.rs  print_colors_struct.rs  providers_check_links_struct.rs  providers_links_limits_struct.rs
libs/config_lib/src/get_project_information/get_config/structures_definitions/: config_struct_def.rs  enable_error_providers_prints_def.rs  enable_mongo_cloud_url_parts_def.rs  enable_mongo_own_url_parts_def.rs  enable_partial_success_providers_prints_def.rs  enable_providers_cleaning_warning_logs_db_collections_in_mongo.rs  enable_providers_cleaning_warning_logs_directory_def.rs  enable_providers_links_limit_def.rs  enable_providers_prints_def.rs  enable_providers_time_measurement_def.rs  enable_success_providers_prints_def.rs  enable_warning_low_providers_prints_def.rs  env_def.rs  links_def.rs  mongo_params_def.rs  params_def.rs  postgres_params_def.rs  print_colors_def.rs  providers_check_links_def.rs
libs/config_lib/src/get_project_information/get_config/structures_implementations/: check_valid_i64_providers_links_limits_for_mongo_impl.rs  check_valid_vec_of_provider_names.rs  config_struct_impl.rs  env_impl.rs  new_impl.rs  wrap_config_checks_impl.rs
libs/config_lib/src/get_project_information/get_user_credentials/: get_lazy_user_credentials_information.rs  get_user_credentials_information.rs  user_credentials_struct.rs  user_credentials_structures.rs
libs/config_lib/src/get_project_information/get_user_credentials/structures_definitions/: github_authorization_def.rs  mongo_cloud_authorization_def.rs  mongo_own_authorization_def.rs  postgres_own_authorization_def.rs  reddit_authorization_def.rs  user_credentials_struct_def.rs
libs/config_lib/src/get_project_information/get_user_credentials/structures_implementations/: user_credentials_struct_impl.rs
libs/diesel_demo/: Cargo.toml
libs/mongo_integration/: Cargo.toml
libs/mongo_integration/src/: lib.rs  mongo_check_collection_is_empty.rs  mongo_drop_collection_non_check.rs  mongo_drop_collection_wrapper.rs  mongo_drop_collection_wrapper_without_tokio_main.rs  mongo_drop_db.rs  mongo_get_possible_aggregation_with_randomization_doc_for_provider.rs  mongo_get_possible_aggregation_with_randomization_doc_for_provider_wrapper.rs  mongo_get_provider_link_parts.rs  mongo_get_provider_link_parts_as_bson_string.rs  mongo_insert_docs_in_empty_collection.rs  mongo_possibly_get_documents_as_string_vector.rs
libs/postgres_integration/: Cargo.toml
libs/postgres_integration/src/: lib.rs
libs/providers_info_lib/: Cargo.toml
libs/providers_info_lib/src/: get_providers_link_parts_wrapper.rs  lib.rs
libs/providers_info_lib/src/get_project_information/: get_providers_json_local_data.rs  get_providers_link_parts.rs  get_providers_link_parts_from_mongo.rs  get_twitter_providers_names.rs
libs/providers_info_lib/src/get_project_information/generate_hashmap_links/: generate_arxiv_hashmap_links.rs  generate_biorxiv_hashmap_links.rs  generate_github_hashmap_links.rs  generate_habr_hashmap_links.rs  generate_medrxiv_hashmap_links.rs  generate_reddit_hashmap_links.rs  generate_twitter_hashmap_links.rs
libs/providers_info_lib/src/get_project_information/get_names/: get_arxiv_names.rs  get_github_names.rs  get_reddit_names.rs
libs/providers_info_lib/src/init_mongo_db_and_collections/: get_providers_json_local_data.rs  put_data_in_mongo.rs
proc_macro_libs/env_var_typed/: Cargo.toml
proc_macro_libs/env_var_typed/src/: lib.rs
proc_macro_libs/gen_enum/: Cargo.toml
proc_macro_libs/gen_enum/src/: lib.rs
proc_macro_libs/gen_enum_without_values/: Cargo.toml
proc_macro_libs/gen_enum_without_values/src/: lib.rs
proc_macro_libs/provider_kind_from_config/: Cargo.toml
proc_macro_libs/provider_kind_from_config/src/: lib.rs
procedural_macros_lib/: Cargo.toml
procedural_macros_lib/src/: lib.rs
(+1129 files in other folders)
