[package]
authors = ["sergey shmakov <tyfaproject@gmail.com>"]
edition = "2021"#maybe cant compile but switch from 2018 to 2021
name = "tufa_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
reqwest = {version = "0.11.0", features = ["json","blocking"]}
roux = "0.4.0" #reddit
serde = "1.0"
serde-xml-rs = "0.4.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
tokio = {version = "1.7.1", features = ["macros"]}
mongodb = "2.0.1"
ansi_term = "0.12"
num_cpus = "1.0"
toml = "0.5"
html_parser = "0.6.2"
regex = "1.5"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
dotenv = "0.15.0"
lazy_static = "1.4"
strum = "0.23.0"
strum_macros = "0.21"
itertools = "0.10.1"
async-std = "1.10.0"
convert_case = "0.5.0"
thiserror = "1.0.30"
displaydoc = "0.2.3"
box_err_from_err = { path = "./proc_macro_libs/box_err_from_err" }
enum_extention = { path = "./proc_macro_libs/enum_extention" }
gen_enum = { path = "./proc_macro_libs/gen_enum" }
git_info = { path = "./proc_macro_libs/git_info" }
impl_display = { path = "./proc_macro_libs/impl_display" }
impl_from_for_upper_struct = { path = "./proc_macro_libs/impl_from_for_upper_struct" }
init_from_env = { path = "./proc_macro_libs/init_from_env" }
provider_kind_from_config = { path = "./proc_macro_libs/provider_kind_from_config" }
#egg-mode = "0.15.0"//twitter
#google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
# quick-xml = "0.18.1"
# log = "0.4"
# simplelog = "0.9"
# tokio = {version = "0.2.0", features = ["macros"]}
# tokio-compat = "0.1.6"
# crossbeam = "0.8.0"
# async-std = "1.9.0"#remove later its only for example
# threadpool = "1.0"
# RustyXML = "0.3.0"
# xml-rs = "0.8" 
# xmlparser = "0.13.2" 
#google-youtube3-cli = "1.0.13+20200402" comand line interface as variant or just can use source code
# strum = { version = "0.20", features = ["derive"] }#for enum into string
#tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
# warp = "0.2"
#tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/

[dev-dependencies]
