[package]
name = "procedural_macros_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = "1.0.75" #for procedural macro (get number of enum variants)
quote = "1.0.9" #for procedural macro (get number of enum variants)