[package]
name = "config_lib"
version = "0.1.0"
authors = ["kuqmua <serezhashmakov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
config = "0.10"
serde_derive = "1.0"
serde = "1.0"
procedural_macros_lib = { path = "../procedural_macros_lib" }