[package]
name = "config_lib"
version = "0.1.0"
authors = ["kuqmua <serezhashmakov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
config = "0.10"
serde_derive = "1.0"
serde_json = "1.0.68" #for VEC_OF_PROVIDER_NAMES from environment variables
serde = "1.0"
strum = "0.21"
strum_macros = "0.21"
itertools = "0.10.1"
dotenv = "0.15.0"
procedural_macros_lib = { path = "../procedural_macros_lib" }