[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["kuqmua <serezhashmakov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }#there is a new versions
dotenv = "0.15.0"