[package]
name = "mongo_integration"
version = "0.1.0"
authors = ["kuqmua <serezhashmakov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.25"#last supported mongo version
mongodb = "1.2.2"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"