[package]
name = "providers_info_lib"
version = "0.1.0"
authors = ["kuqmua <serezhashmakov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config_lib = { path = "../config_lib" }
mongo_integration = { path = "../mongo_integration" }