[package]
name = "gen_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro=true

[dependencies]
# syn = { version = "1.0.75", features=["full"] }
syn = "1.0.75"
quote = "1.0.9"
convert_case = "0.4.0"