[package]
name = "provider_kind_from_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro=true

[dependencies]
syn = { version = "1.0.75", features = ["extra-traits"]} #for procedural macro (get number of enum variants)
# remove features later
quote = "1.0.9" #for procedural macro (get number of enum variants)