[package]
name = "provider_kind_from_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro=true

[dependencies]
syn = { version = "1.0.75", features = ["full"]}
quote = "1.0.9"
convert_case = "0.5.0"